resolved #7 deploy app

--- a/firebase.json
+++ b/firebase.json
@@ -5,7 +5,7 @@
   },
   "hosting": {
     "site": "aphasia-language-app",
-    "public": "public",
+    "public": "build",
     "ignore": [
       "firebase.json",
       "**/.*",
