--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "reactstrap": "^9.1.3",
     "web-vitals": "^2.1.0"
   },
+  "homepage": "http://aphasia-language-app.web.app",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
